1.2.9:
O.Sezer - 2009-10-02 08:41:50 PDT 
 * Fixed memory corruption in music initialization
Sam Lantinga - Sat Oct 3 07:53:24 2009 UTC
 * Upgraded mikmod to libmikmod version 3.1.12
Sam Lantinga - Fri Oct  2 07:15:35 PDT 2009
 * Implemented seamless looping for music playback
Forrest Voight - 2009-06-13 20:31:38 PDT
 * ID3 files are now recognized as MP3 format
Austen Dicken - Tue Feb 26 23:28:27 PST 2008
 * Added support for FLAC audio both as chunks and streaming
Tilman Sauerbeck - Tue Feb 26 03:44:47 PST 2008
 * Added support for streaming WAV files with Mix_LoadMUS_RW()
Ryan Gordon - Mon Feb 4 17:10:08 UTC 2008
 * Fixed crash caused by not resetting position_channels

1.2.8:
Sam Lantinga - Wed Jul 18 09:45:54 PDT 2007
 * Improved detection of Ogg Vorbis and Tremor libraries
Ryan Gordon - Sun Jul 15 12:03:54 EDT 2007
 * Fixed memory leaks in Effects API.
David Rose - Sat Jul 14 22:16:09 PDT 2007
 * Added support for MP3 playback with libmad (for GPL projects only!)
Sam Lantinga - Sat Jul 14 21:39:30 PDT 2007
 * Fixed the final loop of audio samples of a certain size
Sam Lantinga - Sat Jul 14 21:05:09 PDT 2007
 * Fixed opening Ogg Vorbis files using different C runtimes on Windows
Philippe Simons - Sat Jul 14 20:33:17 PDT 2007
 * Added support for Ogg Vorbis playback with Tremor (an integer decoder)
Sam Lantinga - Sat Jul 14 07:02:09 PDT 2007
 * Fixed memory corruption in timidity resampling code
Ryan Gordon - Tue Jul 3 10:44:29 2007 UTC
 * Fixed building SDL_mixer with SDL 1.3 pre-release
Ryan Gordon - Tue Feb 13 08:11:54 2007 UTC
 * Fixed compiling both timidity and native midi in the same build
Hans de Goede - Sun Aug 20 23:25:46 2006 UTC
 * Added volume control to playmus
Jonathan Atkins - Thu Aug 10 15:06:40 2006 UTC
 * Fixed linking with system libmikmod
David Ergo - Fri Jun 23 09:07:19 2006 UTC
 * Corrected no-op conditions in SetDistance(), SetPanning() and SetPosition()
 * Fixed copy/paste errors in channel amplitudes

1.2.7: