@@ -294,10 +294,13 @@ static int read_config_file(char *name)
 
 int Timidity_Init(int rate, int format, int channels, int samples)
 {
-  if (read_config_file(CONFIG_FILE)<0) {
-    if (read_config_file(CONFIG_FILE_ETC)<0) {
-      if (read_config_file(CONFIG_FILE_ETC_TIMIDITY)<0) {
-        return(-1);
+  const char *env = getenv("TIMIDITY_CFG");
+  if (!env || read_config_file(env)<0) {
+    if (read_config_file(CONFIG_FILE)<0) {
+      if (read_config_file(CONFIG_FILE_ETC)<0) {
+        if (read_config_file(CONFIG_FILE_ETC_TIMIDITY)<0) {
+          return(-1);
+        }
       }
     }
   }
